force-app/main/default/objects/SPEN_Appliance__c/SPEN_Appliance__c.object-meta.xml
<CustomObject>
    <label>Appliance</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Appliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appliances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>