force-app/main/default/objects/SPEN_Appliance__c/fields/SPEN_ApplianceNotes__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplianceNotes__c</fullName>
    <description>Created as part of CRMD-5580</description>
    <label>Appliance Notes</label>
    <type>TextArea</type>
</CustomField>