force-app/main/default/objects/SPEN_Appliance__c/fields/SPEN_ApplianceServiceStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplianceServiceStatus__c</fullName>
    <description>Ceated as part of CRMD-5580</description>
    <label>Appliance Service status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Inspection</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
            <value>
                <fullName>Replacement Ordered</fullName>
            </value>
            <value>
                <fullName>Parts On Order</fullName>
            </value>
            <value>
                <fullName>Non Neutral Fault Related</fullName>
            </value>
            <value>
                <fullName>Asset at workshop</fullName>
            </value>
            <value>
                <fullName>Repaired Closed</fullName>
            </value>
            <value>
                <fullName>Replacement Delivered</fullName>
            </value>
            <value>
                <fullName>Customer organising</fullName>
            </value>
            <value>
                <fullName>Awaiting for customer to respond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>