force-app/main/default/objects/SPEN_Appliance__c/fields/SPEN_ApplianceType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplianceType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field created as part of CRMD-5580 for Lookup to Master Appliance Type Data</description>
    <label>Appliance Type</label>
    <referenceTo>SPEN_ApplianceType__c</referenceTo>
    <relationshipLabel>Appliances</relationshipLabel>
    <relationshipName>Appliances</relationshipName>
    <type>Lookup</type>
</CustomField>