force-app/main/default/objects/SPEN_Appliance__c/fields/SPEN_Make__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Make__c</fullName>
    <description>To Capture Make for the Appliance created as part of CRMD-5580</description>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>