force-app/main/default/objects/SPEN_Appliance__c/fields/SPEN_Model__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Model__c</fullName>
    <description>To Capture Model for the Appliance created as part of CRMD-5580</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>