force-app/main/default/objects/SPEN_Appliance__c/fields/SPEN_NextActionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NextActionDate__c</fullName>
    <description>Field created as part of CRMD-5580</description>
    <label>Next Action Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Date Inspected</fullName>
            </value>
            <value>
                <fullName>Date Parts Ordered</fullName>
            </value>
            <value>
                <fullName>Date Repair Due</fullName>
            </value>
            <value>
                <fullName>Date Of Repair</fullName>
            </value>
            <value>
                <fullName>Date Replacement Appliance Ordered</fullName>
            </value>
            <value>
                <fullName>Date Replacement Appliance Due</fullName>
            </value>
            <value>
                <fullName>Date Replacement Appliance Delivered</fullName>
            </value>
            <value>
                <fullName>Closed Date</fullName>
            </value>
            <value>
                <fullName>No Reply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>