force-app/main/default/objects/SPEN_Appliance__c/fields/SPEN_NextActionDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NextActionDateTime__c</fullName>
    <description>Next Action date tym</description>
    <label>Next Action DateTime</label>
    <type>DateTime</type>
</CustomField>