force-app/main/default/objects/SPEN_Appliance__c/fields/SPEN_RepairedBy__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RepairedBy__c</fullName>
    <description>Created as part of CRMD-5580</description>
    <label>Repaired By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Partner Repair</fullName>
            </value>
            <value>
                <fullName>Customer Arranging Repair</fullName>
            </value>
            <value>
                <fullName>Council or LA Repair</fullName>
            </value>
            <value>
                <fullName>Specialist Repair</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>